extract assertParseTimeBreaker; refactor 54 tests